OpenApi + Swagger edits
Use mvn clean install to generate interfaces
