# src/main/java/com/prueba/manomano/controller/ProductController.java
@@ -1,16 +1,14 @@
 package com.prueba.manomano.controller;
 
+import com.prueba.manomano.api.ProductsApi;
 import com.prueba.manomano.controller.dto.ProductsIDTO;
 import com.prueba.manomano.model.ProductResponseList;
 import com.prueba.manomano.service.ProductService;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
@@ -19,23 +17,17 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Optional;
 
+@AllArgsConstructor
 @RestController
-@Slf4j
-public class ProductController {
+public class ProductController implements ProductsApi {
     public static final String YYYY_MM_DD_HH_MM_SS = "yyyy-MM-dd HH:mm:ss";
 
     private final ProductService productsService;
 
-    @Autowired
-    public ProductController(ProductService productsService) {
-        this.productsService = productsService;
-    }
-
-    @GetMapping("/products")
-    public ResponseEntity<ProductResponseList> getProducts(
-            @RequestParam @NotNull @Valid String discountExpDate,
-            @RequestParam @NotNull @Valid Long categorizationId,
-            @RequestParam @Valid Double minPrice) {
+    @Override
+    public ResponseEntity<ProductResponseList> getProducts(@NotNull @Valid String discountExpDate,
+                                                           @NotNull @Valid Long categorizationId,
+                                                           @Valid Double minPrice) {
         final DateTimeFormatter formatter = DateTimeFormatter.ofPattern(YYYY_MM_DD_HH_MM_SS);
         final LocalDateTime dateApply = LocalDateTime.parse(discountExpDate, formatter);
 
