# src/main/resources/api/swagger.yaml
@@ -21,6 +21,22 @@ paths:
           required: true
           schema:
             type: string
+        - in: query
+          name: categorizationId
+          allowEmptyValue: false
+          description: Category id
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - in: query
+          name: minPrice
+          allowEmptyValue: false
+          description: Minimum price
+          required: true
+          schema:
+            type: number
+            format: double
       responses:
         200:
           description: List of products
@@ -100,7 +116,13 @@ components:
         price:
           description: Final product price
           type: number
-          format: double  
+          format: double
+        categorizationType:
+          description: Category type
+          type: string
+        description:
+          description: Description
+          type: string
     Problem:
       type: object
       properties:
